# openvpn3-gui

./: README.md  electron-builder.json  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts  webpack.renderer.config.js
src/: App.tsx  api.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  store.rs
src/components/: ProfileList.tsx  SessionList.tsx  Settings.tsx  StatusBar.tsx
src/components/components/EditProfileMetaDialog/: index.tsx
src/components/components/ProfileConfig/: index.tsx
src/main/: ipcHandlers.ts  main.ts  preload.ts
src/renderer/: App.tsx  index.html  index.tsx
src/renderer/components/: ConfirmDialog.tsx  ProfileList.tsx  SessionList.tsx  Settings.tsx  StatusBar.tsx
src/renderer/components/components/ProfileConfig/: index.tsx
src/renderer/hooks/: useToast.tsx
src/renderer/styles/: global.css
src/shared/: types.ts  utils.ts
