[package]
name = "openvpn-manager"
version = "1.0.0"
description = "OpenVPN3 Manager for Linux"
authors = []
license = ""
repository = ""
default-run = "openvpn-manager"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "openvpn_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "openvpn-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
image = "0.25.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
